# PyQt6-Calculator

./: README.md  pyproject.toml
pyqt6_calc_app/: calc.py  controller.py  demo.py
