[tool.poetry]
name = "pyqt6-windchill-app"
version = "0.1.0"
description = ""
authors = ["gonzj2022 <gonzj988@hsd.k12.or.us>"]
readme = "README.md"
packages = [{include = "pyqt6_windchill_app"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
from tkinter import*
import math

blank_space = " "
root.title(50 * blank_space + "VS Code Calculation")
root.resizable(width =FALSE, height = FALSE)
root.geometry(438x573+460+40)

coverFrame = Frame (root, bd = 20, pady=2, relief = RIDGE)
coverFrame.grid()

root.mainloop()