[tool.poetry]
name = "pyqt6-calc-app"
version = "0.1.0"
description = ""
authors = ["gonzj2022 <gonzj988@hsd.k12.or.us>"]
readme = "README.md"
packages = [{include = "pyqt6_calc_app"}]

[tool.poetry.dependencies]
python = "^3.9"
PyQt6 = "^6.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"